gcc/ 	PR target/49030 	* config/arm/arm-protos.h (maybe_get_arm_condition_code): Declare. 	* config/arm/arm.c (maybe_get_arm_condition_code): New function, 	reusing the old code from get_arm_condition_code.  Return ARM_NV 	for invalid comparison codes. 	(get_arm_condition_code): Redefine in terms of 	maybe_get_arm_condition_code. 	* config/arm/predicates.md (arm_comparison_operator): Use 	maybe_get_arm_condition_code.

gcc/testsuite/
	PR target/49030
	* gcc.dg/torture/pr49030.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@178636 138bc75d-0d04-0410-961f-82ee72b054a4